# HarmReCUDA

./: .gitignore  README.md
HarmReCUDA/: AMatrix.cpp  AMatrix.h  AMatrix.hpp  CompileMex.m  GenerateDesignMatrix_cuda.cu  GenerateDesignMatrix_d.cpp  GenerateDesignMatrix_d.hpp  GenerateProjectionMatrix.cpp  GenerateProjectionMatrix.h  GenerateProjectionMatrix_cuda.cu  GenerateProjectionMatrix_d.cpp  GenerateProjectionMatrix_d.cuh  GenerateProjectionMatrix_d.h  GenerateProjectionMatrix_d.hpp  HarmReCUDA.cpp  HarmReCUDA.h  HarmReCUDA.hpp  HarmReCUDA.lib  HarmReCUDA_vs2019.sln  HarmReCUDA_vs2019.vcxproj  HarmReCUDA_vs2019.vcxproj.filters  HarmReMex.exp  LinearAlgebraStructs.h  Matrix.cpp  Matrix.h  Matrix.hpp  Matrix_cpu.cpp  Matrix_cpu.h  Matrix_d.cpp  Matrix_d.h  Matrix_d.hpp  SquareElements_cuda.cu  SquareElements_d.cu  Vector.cpp  Vector.h  Vector.hpp  Vector_d.cpp  Vector_d.h  Vector_d.hpp  approximatePseudoInversion.cpp  (+32 more)
HarmReCUDA/LAlib/: ChangeLog  Makefile.am  Makefile.in  README  auxstorage.h  bisection.h  bitvector.cc  bitvector.h  config.h.in  configure  configure.ac  conjgrad.h  csrmat.cc  csrmat.h  cuda_la.cc  cuda_la.h  davidson.h  diis.h  doxygen.cfg  footer.html  fortran.h  fourindex.h  gmres.h  la.h  la_traits.h  laerror.cc  laerror.h  mat.cc  mat.h  matexp.h  noncblas.cc  noncblas.h  nonclass.cc  nonclass.h  permutation.h  qsort.h  smat.cc  smat.h  sparsemat.cc  sparsemat.h  (+8 more)
HarmReMEX/: HarmReMEX.cpp  HarmReMEX.vcxproj
